--- a/ROC/Web.config
+++ b/ROC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="Data Source=LING-PC\SQLSERVER;Initial Catalog=ROC;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="ROCDBContainer" connectionString="metadata=res://*/Models.ROCDB.csdl|res://*/Models.ROCDB.ssdl|res://*/Models.ROCDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=LING-PC\SQLSERVER;Initial Catalog=ROC;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
