finish news and news category
Signed-off-by: billmo <panan.songyu@gmail.com>

--- a/ROC/ROC.csproj
+++ b/ROC/ROC.csproj
@@ -404,20 +404,19 @@
       <LastGenOutput>ROCModel.cs</LastGenOutput>
     </None>
     <Content Include="Views\News\Index.cshtml" />
-    <Content Include="Views\News\Delete.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\News\Create.cshtml" />
     <Content Include="Views\NewsCategory\Index.cshtml" />
     <Content Include="Views\NewsCategory\Create.cshtml" />
-    <Content Include="Views\NewsCategory\Details.cshtml" />
     <Content Include="Views\Home\News.cshtml" />
     <Content Include="Views\Home\PicStory.cshtml" />
-    <Content Include="Views\NewsCategory\_ShowList.cshtml" />
+    <Content Include="Views\Home\ShowList.cshtml" />
     <Content Include="Views\Home\NewsDetail.cshtml" />
     <Content Include="Views\Shared\_NewsLayout.cshtml" />
     <Content Include="Views\Shared\_BackedLayout.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\News\Edit.cshtml" />
+    <Content Include="Views\NewsCategory\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
