--- a/ROC/ROC.csproj
+++ b/ROC/ROC.csproj
@@ -357,11 +357,13 @@
     <Content Include="Content\IndexPic\09.jpg" />
     <Content Include="Content\IndexPic\css\smallslider.css" />
     <Content Include="Content\jquery.lightbox-0.5.css" />
+    <Content Include="Content\photoscroll.css" />
     <Content Include="Global.asax" />
     <Content Include="Models\ROCDB.edmx.sql" />
     <Content Include="Scripts\EditorHookup.js" />
     <Content Include="Scripts\jquery.lightbox-0.5.js" />
     <Content Include="Scripts\jquery.smallslider.js" />
+    <Content Include="Scripts\photoscroll.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -416,6 +418,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\book\" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Models\ROCDB.edmx">
@@ -443,6 +446,9 @@
     <Content Include="Views\Home\News.cshtml" />
     <Content Include="Views\Home\historypeople.cshtml" />
     <Content Include="Views\Home\photogallary.cshtml" />
+    <Content Include="Views\Home\Copyright.cshtml" />
+    <Content Include="Views\Shared\NewsLayout.cshtml" />
+    <Content Include="Views\Home\teamstory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
