--- a/ROC/Views/Web.config
+++ b/ROC/Views/Web.config
@@ -54,5 +54,10 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+    <staticContent>
+      <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <mimeMap fileExtension=".ogv" mimeType="video/ogg" />
+      <mimeMap fileExtension=".webm" mimeType="video/webm" />
+    </staticContent>
   </system.webServer>
 </configuration>
